# VDM

./: .env.example  .gitignore  README.md  config.yaml  launch.bat  main.py  prompts.yml  pyproject.toml  readme.md  requirements.txt  roadmap.md  settings.yml  todo.md  voices.yml
modules/: client.py  config.py  gamestate_manager.py  llm_manager.py  rvc_manager.py  server.py  stt_manager.py  tts_manager.py  ui.py
server/: audio_manager.py  config.py  database_manager.py  game_manager.py  main.py  memory_manager.py  models.py  persistence_manager.py  room_manager.py  user_manager.py
src/vdm_server/: audio_manager.py  llm_providers.py  logger.py  main.py  memory_manager.py  story_manager.py
web/: index.html  style.css
web/js/: api.js  app.js  audio.js  avatars.js  commands.js  dom-elements.js  markdown-renderer.js  speech-recognition.js  state.js  ui.js
