[project]
name = "storyteller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc>=1.11.0",
    "faster-whisper>=1.1.1",
    "kokoro>=0.9.4",
    "lmstudio>=1.3.0",
    "pyannote-audio>=1.1.2",
    "pyyaml>=6.0.2",
    "rvc-python>=0.1.5",
]
